[package]
name = "nwc-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nwc-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.16"
bitcoin = "0.29.2"
clap = { version = "4.1.14", features = ["derive"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
diesel = { version = "2.0", features = ["sqlite", "r2d2", "numeric"] }
diesel_migrations = "2.0.0"
lightning = "0.0.115"
lightning-invoice = "0.23.0"
nostr = { version = "=0.22.0-bitcoin-v0.29", default-features = false, features = ["nip47"] }
nostr-sdk = "=0.22.0-bitcoin-v0.29"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
